AlcoBot v1.1.0 (not yet released):
  NEW: Commands can throw CMDHELP and GETOPT errors to display command usage.
  NEW: Modules clean-up after themselves, so they can be unloaded at any time.
  NEW: Multiple prefixes can be specified for commands (e.g. !bw and !sitebw).
  NEW: Redesigned the command option system: prefixes are configurable per
       command, new permission options, and the command type must be declared.
  NEW: Script variable definitions are now modules.
  NEW: Variable definitions and theme entries are now in groups according to
       the module they interface with (improves ioA/nxTools support).
  CHG: Changed the section colour format.
  CHG: Moved sitebot connection code from the "ftpd" module to "ftpconn".
  CHG: Moved the formatting and variable systems to the bot's core.
  CHG: Removed the "varFiles" option from the configuration file.
  CHG: Renamed all library commands and dropped the namespace exports.
  FIX: The groups module didn't remove sections with no groups.

AlcoBot v1.0.0 (Feb 23, 2006):
  NEW: Improved installation instructions.
  NEW: Option to include or exclude hidden users in bandwidth stats (!bw/!bwdn/!bwup).
  NEW: The module load order is automatically rearranged so dependencies are loaded first.
  CHG: Dependency checks are performed by ModuleLoadEx now, rather than ModuleLoad.
  FIX: Division-by-zero error in the free module if the total size of a volume is zero.
  FIX: Forgot to include the required "UnNuke_Log" setting for ioA.
  FIX: Inconsistencies in the FTP library's event handler during the login sequence.

AlcoBot v0.7.0 (Jan 7, 2006):
  NEW: Check for "DNS" fields in glFTPD v2.01 user-files.
  NEW: Completed Project-ZS-NG support, for glFTPD only.
  NEW: Module for ioA support, named "ioa".
  NEW: Module to issue SITE commands from IRC, named "sitecmd".
  NEW: Module to query glFTPD's data files, named "gldata".
  NEW: Option to format time values in UTC or local time.