@@ -1,5 +1,6 @@
 AlcoBot v1.1.0 (not yet released):
   NEW: Commands can throw CMDHELP and GETOPT errors to display command usage.
+  NEW: Modules are reference counted, so dependencies won't be unloaded early.
   NEW: Modules clean-up after themselves, so they can be unloaded at any time.
   NEW: Multiple prefixes can be specified for commands (e.g. !bw and !sitebw).
   NEW: Redesigned the command option system: prefixes are configurable per
